--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 MONGO_URI=mongodb+srv://usamapcodezee:zZUZcjtoECnUPfN4@cluster0.xepdmhr.mongodb.net/MongoSchema
-NEXT_PUBLIC_API_BASE_URL=http://192.168.29.83:3000/api
+# NEXT_PUBLIC_API_BASE_URL=http://192.168.29.83:3000/api
 
-# NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/api
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/api
 # IP_PORT=192.168.29.83/3000
-
 
 # credentials
 GITHUB_CLIENT_ID = "Ov23li8L6TAIOB4PNS5b"
