--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
+    "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-data-grid-generator": "^7.9.0",
+    "@mui/x-data-grid-pro": "^7.9.0",
+    "@nextui-org/checkbox": "^2.1.2",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -19,6 +29,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.2.13",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
@@ -36,7 +47,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "ts-node": "^10.9.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
@@ -55,7 +67,7 @@
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
