--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "array-bracket-spacing": "error"
   },
   "settings": {
     "react": {
