--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "bootstrap-icons": "^1.11.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.13",
     "jsonwebtoken": "^9.0.2",
@@ -45,6 +47,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-final-form": "^6.5.9",
+    "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
