--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,16 +13,17 @@
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "ignorePatterns": ["**/polyfills.js"],
+  "ignorePatterns": ["**/polyfills.js", "/.next", "node_modules/"],
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prop-types": "off",
-    "array-bracket-spacing": "error"
+    "array-bracket-spacing": "error",
+    "linebreak-style": ["error", "windows"]
   },
   "settings": {
     "react": {
-      "version": "detect"
+      "version": "^18"
     }
   }
 }
