--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid-generator": "^7.9.0",
     "@mui/x-data-grid-pro": "^7.9.0",
     "@nextui-org/checkbox": "^2.1.2",
+    "@nextui-org/react": "^2.4.6",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -59,7 +60,8 @@
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@eslint/js": "^9.7.0",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
@@ -73,14 +75,14 @@
     "@types/react-dom": "^18",
     "@types/testing-library__jest-dom": "^5.9.5",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
+    "eslint": "^9.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "globals": "^15.8.0",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^1.3.3",
@@ -88,6 +90,6 @@
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.2.2",
     "typescript": "^5",
-    "typescript-eslint": "^7.16.0"
+    "typescript-eslint": "^7.18.0"
   }
 }
